Upgrade lein